DT-2797: Remove Admin ability to create elections (#2778)